<resources>
    <string name="app_name">Uni4One</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Şifre</string>
    <string name="prompt_password_again">Şifre Tekrar</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="action_sign_up_short">Üye Ol</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="welcome_messeage">"Üniversiteleri, toplulukları ve haberleri keşfet"</string>
    <string name="title_activity_sign_up">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
